--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         color : white;
       }
     </style>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Code</a>
+    <nav class="navbar navbar-expand-lg">
+    <a class="navbar-brand" href="#">부트스트랩</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -25,7 +25,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
@@ -70,6 +70,68 @@
           <p class ="text-center">coding is super world</p>
           <p class="text-center"><a class ="btn btn-primary btn-lg" href="#" role="button">Join codingworld</a></p>
           <br><br><br>
+      </div>
+      <div class = "row">
+        <div class = "col-md-4">
+          <h4>부트스트랩의 특징</h4>
+          <p>부트스트랩은 다양한 컴포넌트를 사용할수 있는 하나의 API이다.</p>
+          <p><a class="btn btn-default" data-target ="#modal" data-toggle="modal">자세히알아보기</a></p>
+        </div>
+        <div class = "col-md-4">
+          <h4>부트스트랩의 특징</h4>
+          <p>부트스트랩은 다양한 컴포넌트를 사용할수 있는 하나의 API이다.</p>
+          <p><a class="btn btn-default" href ="#">자세히알아보기</a></p>
+        </div>
+        <div class = "col-md-4">
+          <h4>부트스트랩의 특징</h4>
+          <p>부트스트랩은 다양한 컴포넌트를 사용할수 있는 하나의 API이다.</p>
+          <p><a class="btn btn-default" href = "#">자세히알아보기</a></p>
+        </div>
+      </div>
+      <hr>
+    </div>
+    <footer style= "background-color : #bbbbbb";>
+      <div class = "container">
+        <br>
+        <div class ="row">
+          <div class ="col-sm-2" style ="text-align: center";><h5>Copyright &copy; 2021</h5><h5>민석(minseok)</h5></div>
+          <div class ="col-sm-4"><h4>대표자소개</h4><p>서민석</p></div>
+          <div class = "col-sm-2"><h4 style="text-align:center;">네비게이션</h4>
+            <div class ="list-group">
+              <a href ="#" class="list-group-item">소개</a>
+              <a href ="#" class="list-group-item">강사진</a>
+              <a href ="#" class="list-group-item">강의</a>
+            </div>
+          </div>
+          <div class = "col-sm-2"><h4 style="text-align:center;">SNS</h4>
+            <div class ="list-group">
+              <a href ="#" class="list-group-item">facebook</a>
+              <a href ="#" class="list-group-item">youtube</a>
+              <a href ="#" class="list-group-item">naver</a>
+            </div>
+          </div>
+          <div class="col-sm-2"><h4 styl;e="text-align: center;"><span class ="glyphicon glyphicon-ok"></span>by 민석</h4>
+
+
+          </div>
+        </div>
+      </div>
+
+    </footer>
+    <div class ="row">
+      <div class ="modal" id="modal" tabindex="-1">
+        <div class ="modal-dialog">
+          <div class ="modal-content">
+              <div class ="modal-header">
+                부트스트랩의 특징
+                <button class ="close" data-dismiss="modal">&times;</button>
+              </div>
+              <div class = "modal-body" style ="text-align: center;">
+                안녕하세요 방갑습니다.<br>
+                다음에 또뵙시다.<br>
+              </div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
