--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>coding</title>
     <link rel ="stylesheet" href="css/bootstrap.css">
     <link rel ="stylesheet" href="css/coding.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
   </head>
   <body>
     <style type ="text/css">
@@ -17,7 +19,7 @@
       }
     </style>
     <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="#">부트스트랩</a>
+    <a class="navbar-brand" href="index.html">부트스트랩</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -25,20 +27,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+          <a class="nav-link" href="index.html">소개 <span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="instructor.html">강사진</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
+            강의목록
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="lecture.html?lectureName=java">java</a>
+            <a class="dropdown-item" href="lecture.html?lectureName=css">css</a>
+            <a class="dropdown-item" href="lecture.html?lectureName=android">android</a>
           </div>
         </li>
         <li class="nav-item">
@@ -56,9 +57,8 @@
           접속하기
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">로그아웃</a>
-          <a class="dropdown-item" href="#">회원가입</a>
-
+          <a class="dropdown-item" href="loginForm.html">로그아웃</a>
+          <a class="dropdown-item" href="register.html">로그인</a>
         </div>
       </li>
     </ul>
@@ -68,8 +68,8 @@
       <div class ="jumbotron">
           <h1 class ="text-center">coding world</h1>
           <p class ="text-center">coding is super world</p>
-          <p class="text-center"><a class ="btn btn-primary btn-lg" href="#" role="button">Join codingworld</a></p>
-          <br><br><br>
+          <p class="text-center"><a class ="btn btn-primary btn-lg" href="lecture.html" role="button">Join codingworld</a></p>
+
       </div>
       <div class = "row">
         <div class = "col-md-4">
@@ -80,15 +80,56 @@
         <div class = "col-md-4">
           <h4>부트스트랩의 특징</h4>
           <p>부트스트랩은 다양한 컴포넌트를 사용할수 있는 하나의 API이다.</p>
-          <p><a class="btn btn-default" href ="#">자세히알아보기</a></p>
+          <p><a class="btn btn-default" href ="lecture.html">자세히알아보기</a></p>
         </div>
         <div class = "col-md-4">
           <h4>부트스트랩의 특징</h4>
           <p>부트스트랩은 다양한 컴포넌트를 사용할수 있는 하나의 API이다.</p>
-          <p><a class="btn btn-default" href = "#">자세히알아보기</a></p>
+          <p><a class="btn btn-default" href = "lecture.html">자세히알아보기</a></p>
         </div>
       </div>
       <hr>
+      <div class="panel panel-info">
+        <div class ="panel-heading">
+          <h3 class ="panel-title"><span class ="glyphicon glyphicon-pencil"></span>
+            &nbsp;&nbsp; 최신 강의 목록
+        </div>
+        <div class"panel-body">
+          <div class ="media">
+            <div class="media-left">
+              <a href="lecture.html?lectureName=java"><img class = "media-object" src ="images/java.png" alt="java" height = "96px" width = "96px"></a>
+            </div>
+            <div class = "media-body">
+              <h4 class = "media-heading">java coding course<a href="lecture.html?lectureName=java"></a>&nbsp;<span class ="badge">New</span></h4>
+                자바강의는 기초프로그래밍 강의입니다. 처음 프로그래밍을 접하는 입문자가 듣기에 적합한 강의입니다.
+                강의료는 무료이며 자바 기초프로그래밍 강좌는 총 20강으로 구성됩니다.
+            </div>
+          </div>
+          <hr>
+          <div class ="media">
+            <div class="media-left">
+              <a href="lecture.html?lectureName=css"><img class = "media-object" src ="images/css.png" alt="java" height = "96px" width = "96px"></a>
+            </div>
+            <div class = "media-body">
+              <h4 class = "media-heading">css course<a href="lecture.html?lectureName=css"></a>&nbsp;<span class ="badge">New</span></h4>
+                css는 기초프로그래밍 강의입니다. 처음 프로그래밍을 접하는 입문자가 듣기에 적합한 강의입니다.
+                강의료는 무료이며 css 기초프로그래밍 강좌는 총 20강으로 구성됩니다.
+            </div>
+          </div>
+            <hr>
+          <div class ="media">
+            <div class="media-left">
+              <a href="lecture.html?lectureName=android"><img class = "media-object" src ="images/android.jpg" alt="android" height = "96px" width = "96px"></a>
+            </div>
+            <div class = "media-body">
+              <h4 class = "media-heading">android course<a href="lecture.html?lectureName=android"></a>&nbsp;<span class ="badge">New</span></h4>
+                android 강의는 기초프로그래밍 강의입니다. 처음 프로그래밍을 접하는 입문자가 듣기에 적합한 강의입니다.
+                강의료는 무료이며 android 기초프로그래밍 강좌는 총 20강으로 구성됩니다.
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
     <footer style= "background-color : #bbbbbb";>
       <div class = "container">
@@ -98,9 +139,9 @@
           <div class ="col-sm-4"><h4>대표자소개</h4><p>서민석</p></div>
           <div class = "col-sm-2"><h4 style="text-align:center;">네비게이션</h4>
             <div class ="list-group">
-              <a href ="#" class="list-group-item">소개</a>
-              <a href ="#" class="list-group-item">강사진</a>
-              <a href ="#" class="list-group-item">강의</a>
+              <a href ="index.html" class="list-group-item">소개</a>
+              <a href ="instructor.html" class="list-group-item">강사진</a>
+              <a href ="lecture.html" class="list-group-item">강의</a>
             </div>
           </div>
           <div class = "col-sm-2"><h4 style="text-align:center;">SNS</h4>
@@ -110,11 +151,10 @@
               <a href ="#" class="list-group-item">naver</a>
             </div>
           </div>
-          <div class="col-sm-2"><h4 styl;e="text-align: center;"><span class ="glyphicon glyphicon-ok"></span>by 민석</h4>
-
-
+          <div class="col-sm-2"><h4 style="text-align : center"><span class ="glyphicon glyphicon-ok"></span>by 민석</h4>
           </div>
         </div>
+
       </div>
 
     </footer>
