--- a/instructor.html
+++ b/instructor.html
@@ -11,7 +11,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   </head>
   <body>
-
+    <style type ="text/css">
+      blockquote{
+        background : #f9f9f9;
+        margin: 1.5em 10px;
+        padding: 0.5em 10px;
+      }
+      blockquote:before{
+        color : #cccccc;
+        content: open-quote;
+        font-size : 3em;
+        line-height : 0.1em;
+      }
+      blockquote:after{
+        color : #cccccc;
+        content: close-quote;
+        font-size : 3em;
+        line-height : 0.1em;
+      }
+    </style>
     <nav class="navbar navbar-expand-lg">
     <a class="navbar-brand" href="index.html">부트스트랩</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +78,6 @@
   <div class = "container">
     <div class = "row">
       <div class = "col-xs-12">
-
         <div class="panel panel-success">
           <div class="panel-heading">
             <h3 class="panel-title"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp;&nbsp;이희수</h3>
@@ -102,6 +119,9 @@
               </tr>
             </tbody>
           </table>
+          <div class = "panel-footer">
+            <blockquote>이또한 지나가리라</blockquote>
+          </div>
         </div>
       </div>
     </div>
@@ -160,6 +180,9 @@
               </tr>
             </tbody>
           </table>
+          <div class = "panel-footer">
+            <blockquote>이또한 지나가리라</blockquote>
+          </div>
         </div>
       </div>
     </div>
