--- a/instructor.html
+++ b/instructor.html
@@ -75,57 +75,7 @@
       </li>
     </ul>
   </nav>
-  <div class = "container">
-    <div class = "row">
-      <div class = "col-xs-12">
-        <div class="panel panel-success">
-          <div class="panel-heading">
-            <h3 class="panel-title"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp;&nbsp;이희수</h3>
-          </div>
-          <div class="panel-body">
-            <div class="media">
-              <div class="media-left">
-                <a href="#">
-                  <img class="media-object" src="images/android.jpg" width = "96px" height = "96px" alt="android">
-                </a>
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">이희수</h4>
-                안녕하세요 여러분
-              </div>
-            </div>
-          </div>
-          <table class = "table">
-            <thead>
-              <tr>
-                <th>강사명</th>
-                <th>강의 번호</th>
-                <th>강의 제목</th>
-                <th>강의 날짜</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>희수</td>
-                <td>1</td>
-                <td>android 기초프로그래밍 강좌</td>
-                <td>2021-03-04</td>
-              </tr>
-              <tr>
-                <td>희인</td>
-                <td>2</td>
-                <td>css 기초프로그래밍 강좌</td>
-                <td>2021-03-04</td>
-              </tr>
-            </tbody>
-          </table>
-          <div class = "panel-footer">
-            <blockquote>이또한 지나가리라</blockquote>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+
 
   <div class = "container">
     <div class = "row">
@@ -161,23 +111,18 @@
             </thead>
             <tbody>
               <tr>
-                <td>민석</td>
+                <td>서민석</td>
                 <td>1</td>
-                <td><a href="lecture.html?lectureName=java">java 기초프로그래밍 강좌</a></td>
+                <td><a href="/calculator.html">계산기 프로그램 강좌</a></td>
                 <td>2021-03-04</td>
               </tr>
               <tr>
-                <td>민주</td>
+                <td>서민석</td>
                 <td>2</td>
-                <td><a href="lecture.html?lectureName=css">css 기초프로그래밍 강좌</a></td>
+                <td><a href="/clock.html">시계 프로그램 강좌</a></td>
                 <td>2021-03-01</td>
               </tr>
-              <tr>
-                <td>민시</td>
-                <td>3</td>
-                <td><a href="lecture.html?lectureName=android">androids 기초프로그래밍 강좌</a></td>
-                <td>2021-03-02</td>
-              </tr>
+              
             </tbody>
           </table>
           <div class = "panel-footer">
