--- a/instructor.html
+++ b/instructor.html
@@ -113,13 +113,13 @@
               <tr>
                 <td>서민석</td>
                 <td>1</td>
-                <td><a href="/calculator.html">계산기 프로그램 강좌</a></td>
+                <td><a href="calculator.html">계산기 프로그램 강좌</a></td>
                 <td>2021-03-04</td>
               </tr>
               <tr>
                 <td>서민석</td>
                 <td>2</td>
-                <td><a href="/clock.html">시계 프로그램 강좌</a></td>
+                <td><a href="clock.html">시계 프로그램 강좌</a></td>
                 <td>2021-03-01</td>
               </tr>
               
