--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             강의목록
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/calculator.html">계산기</a>
-            <a class="dropdown-item" href="/clock.html">시계</a>
+            <a class="dropdown-item" href="calculator.html">계산기</a>
+            <a class="dropdown-item" href="clock.html">시계</a>
           
           </div>
         </li>
@@ -97,20 +97,20 @@
         <div class"panel-body">
           <div class ="media">
             <div class="media-left">
-              <a href="/calculator.html"><img class = "media-object" src ="images/java.png" alt="java" height = "96px" width = "96px"></a>
+              <a href="calculator.html"><img class = "media-object" src ="images/java.png" alt="java" height = "96px" width = "96px"></a>
             </div>
             <div class = "media-body">
-              <h4 class = "media-heading">Calculator<a href="/calculator.html"></a>&nbsp;<span class ="badge">New</span></h4>
+              <h4 class = "media-heading">Calculator<a href="calculator.html"></a>&nbsp;<span class ="badge">New</span></h4>
                 계산기 프로그램을 만들어 보았습니다.
             </div>
           </div>
           <hr>
           <div class ="media">
             <div class="media-left">
-              <a href="/clock.html"><img class = "media-object" src ="images/css.png" alt="java" height = "96px" width = "96px"></a>
+              <a href="clock.html"><img class = "media-object" src ="images/css.png" alt="java" height = "96px" width = "96px"></a>
             </div>
             <div class = "media-body">
-              <h4 class = "media-heading">Clock<a href="/clock.html"></a>&nbsp;<span class ="badge">New</span></h4>
+              <h4 class = "media-heading">Clock<a href="clock.html"></a>&nbsp;<span class ="badge">New</span></h4>
               시계 프로그램을 만들어 보았습니다.
             </div>
           </div>
