--- a/lecture.html
+++ b/lecture.html
@@ -59,9 +59,9 @@
   <div class ="container">
     <div class ="row">
       <ul class = "list-group">
-        <a href = "/calculator.html" class="list-group-item"> 1강 계산기 프로그램</a>
-        <a href = "/clock.html" class="list-group-item"> 2강 아날로그 시계 프로그램</a>
-        
+        <a href = "calculator.html" class="list-group-item"> 1강 계산기 프로그램</a>
+        <a href = "clock.html" class="list-group-item"> 2강 아날로그 시계 프로그램</a>
+      
       </ul>
     </div>
     <div class = "row">
