--- a/instructor.html
+++ b/instructor.html
@@ -49,9 +49,8 @@
             강의목록
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="lecture.html?lectureName=java">java</a>
-            <a class="dropdown-item" href="lecture.html?lectureName=css">css</a>
-            <a class="dropdown-item" href="lecture.html?lectureName=android">android</a>
+            <a class="dropdown-item" href="calculator.html">계산기</a>
+            <a class="dropdown-item" href="clock.html">시계</a>
           </div>
         </li>
         <li class="nav-item">
